tests/baselines/reference/nodeModulesSynchronousCallErrors(module=node16).errors.txt
index.ts(3,22): error TS1471: Module './index.js' cannot be imported using this construct. The specifier only resolves to an ES module, which cannot be imported with 'require'. Use an ECMAScript import instead.
subfolder/index.ts(2,17): error TS1479: The current file is a CommonJS module whose imports will produce 'require' calls; however, the referenced file is an ECMAScript module and cannot be imported with 'require'. Consider writing a dynamic 'import("../index.js")' call instead.
  To convert this file to an ECMAScript module, change its file extension to '.mts' or create a local package.json file with `{ "type": "module" }`.
subfolder/index.ts(3,22): error TS1471: Module '../index.js' cannot be imported using this construct. The specifier only resolves to an ES module, which cannot be imported with 'require'. Use an ECMAScript import instead.


==== subfolder/index.ts (2 errors) ====
    // cjs format file
    import {h} from "../index.js";
                    ~~~~~~~~~~~~~
!!! error TS1479: The current file is a CommonJS module whose imports will produce 'require' calls; however, the referenced file is an ECMAScript module and cannot be imported with 'require'. Consider writing a dynamic 'import("../index.js")' call instead.
!!! error TS1479:   To convert this file to an ECMAScript module, change its file extension to '.mts' or create a local package.json file with `{ "type": "module" }`.
    import mod = require("../index.js");
                         ~~~~~~~~~~~~~
!!! error TS1471: Module '../index.js' cannot be imported using this construct. The specifier only resolves to an ES module, which cannot be imported with 'require'. Use an ECMAScript import instead.
    import {f as _f} from "./index.js";
    import mod2 = require("./index.js");
    export async function f() {
        const mod3 = await import ("../index.js");
        const mod4 = await import ("./index.js");
        h();
    }
==== index.ts (1 errors) ====
    // esm format file
    import {h as _h} from "./index.js";
    import mod = require("./index.js");
                         ~~~~~~~~~~~~
!!! error TS1471: Module './index.js' cannot be imported using this construct. The specifier only resolves to an ES module, which cannot be imported with 'require'. Use an ECMAScript import instead.
    import {f} from "./subfolder/index.js";
    import mod2 = require("./subfolder/index.js");
    export async function h() {
        const mod3 = await import ("./index.js");
        const mod4 = await import ("./subfolder/index.js");
        f();
    }
==== package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module"
    }
==== subfolder/package.json (0 errors) ====
    {
        "type": "commonjs"
    }